--- a/domestic.html
+++ b/domestic.html
@@ -14,12 +14,12 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/js/source/jquery.fancybox.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl.carousel.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl.theme.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl.transitions.css">
     <link rel="stylesheet" type="text/css" href="assets/css/screen.css">
     <link rel="stylesheet" type="text/css" href="assets/css/addon.css">
+
 
 
 </head>
@@ -37,6 +37,11 @@
                         <div class="BillCalculator_Inner">
                             <div class="Masthead">
                                 <div class="Content mb-20">
+
+                                    <div style="text-align: center;">
+                                        <img class="" src="assets/imgs/icons/tu-logo-02.png" width="200" alt="">
+                                    </div>
+
                                     <h1 class="WhiteTxt mb-20 text-uppercase">ELECTRICITY BILL CALCULATOR BY TU(ADP)
                                     </h1>
                                     <h4>CONSUMER CATEGORY:</h4>
