--- a/industrial.html
+++ b/industrial.html
@@ -5,7 +5,7 @@
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <title>ELECTRICITY BILL CALCULATOR BY TU(ADP)</title>
+    <title>ELECTRICITY BILL CALCULATOR</title>
 
 
     <!-- Favicons -->
@@ -41,7 +41,7 @@
                                     <img class="" src="assets/imgs/icons/tu-logo-02.png" width="200" alt="">
                                 </div>
 
-                                <h1 class="WhiteTxt mb-20 text-uppercase">ELECTRICITY BILL CALCULATOR BY TU(ADP)</h1>
+                                <h1 class="WhiteTxt mb-20 text-uppercase">ELECTRICITY BILL CALCULATOR</h1>
                                 <div class="Content mb-20">
                                     <h4>CONSUMER CATEGORY:</h4>
                                 </div>
