--- a/domestic.html
+++ b/domestic.html
@@ -5,7 +5,7 @@
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <title>ELECTRICITY BILL CALCULATOR BY TU(ADP)</title>
+    <title>ELECTRICITY BILL CALCULATOR</title>
 
 
     <!-- Favicons -->
@@ -42,7 +42,7 @@
                                         <img class="" src="assets/imgs/icons/tu-logo-02.png" width="200" alt="">
                                     </div>
 
-                                    <h1 class="WhiteTxt mb-20 text-uppercase">ELECTRICITY BILL CALCULATOR BY TU(ADP)
+                                    <h1 class="WhiteTxt mb-20 text-uppercase">ELECTRICITY BILL CALCULATOR
                                     </h1>
                                     <h4>CONSUMER CATEGORY:</h4>
                                 </div>
